...
                    <view key="view" contentMode="scaleToFill" id="7p4-s2-SEa">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwi-Qd-cKP">
                                <rect key="frame" x="16" y="54.5" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <state key="normal" image="back-icon"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="o7E-ZO-cD2" eventType="touchUpInside" id="xu3-sD-MhR"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verify your account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V6F-4i-3Xv">
                                <rect key="frame" x="133" y="56" width="148" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Wn-dy-7Y7">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CIM-66-rHU">
                                <rect key="frame" x="165.5" y="367" width="83" height="28.5"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Resend code">
                                            <attributes>
                                                <color key="NSColor" red="0.24705882352941178" green="0.26666666666666666" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                                <font key="NSFont" size="14" name="Lato-Regular"/>
                                                <integer key="NSUnderline" value="1"/>
                                            </attributes>
                                        </fragment>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0a-w0-aZN" customClass="AnimatableButton" customModule="IBAnimatable">
                                <rect key="frame" x="17" y="452.5" width="380" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="17"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="12" maxX="0.0" maxY="12"/>
                                <state key="normal" title="CONTINUE">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
                                        <color key="value" red="0.37254901959999998" green="0.6588235294" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                                    </userDefinedRuntimeAttribute>
...
