...
                                        <subviews>
                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vCl-Gv-KoB">
                                                <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ta0-gZ-5x1">
                                                        <rect key="frame" x="20" y="44" width="24" height="24"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="sideMenuButton"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="24" id="Aft-NN-KxH"/>
                                                        </constraints>
                                                        <state key="normal" image="menu-icon"/>
                                                        <connections>
                                                            <action selector="didTapSideMenuButton:" destination="d62-F6-SR1" eventType="touchUpInside" id="L8r-7X-jqM"/>
...
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRQ-sO-bHC">
                                                <rect key="frame" x="0.0" y="0.0" width="414" height="82"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SeY-na-FSA">
                                                        <rect key="frame" x="82" y="17" width="312" height="48"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="greetingUserLabel"/>
                                                        <string key="text">Good morning,
John Doe</string>
                                                        <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="20"/>
                                                        <color key="textColor" red="0.31764705879999999" green="0.34509803919999998" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
...
