...
            UIAlertAction(title: app.labelText, style: .default) { (action) in
                self.selectedApp = app
                self.appDropdownLabel.text = app.labelText
            }
        })
        actions.append(.cancelButton())
        self.showActionSheet(title: "Which app would you like to log into?",
                             actions: actions,
                             popoverSourceView: self.appDropdownLabel)
    }
    
    @IBAction func didTapLogin(_ sender: Any) {
        guard let username = usernameField.nullableTrimmmedText else{
...
